Compositor Normal Node Sphere unchangable when Reset All To Default Values is used on it. #38651

Closed
opened 2014-02-15 20:58:42 +01:00 by Terry Wallwork · 9 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender GIT REV GIT2014-02-15-18-40-33-1c866c3
on a fedora 20 64 bit box with intel 3000 gfx

I noticed that if I right click on the Normal Node Sphere and select
the Reset All To Default Values in the compositor the sphere turns
black and then trying to reposition the globe by left clicking on it does
not seem to work; The globe stays black.

I have attached a test blend file, my system-info.txt file and
a video showing the problem.

system-info.txt

NormalNode_Sphere_Bug.blend

NormalSphereBugVideo.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT REV GIT2014-02-15-18-40-33-1c866c3 on a fedora 20 64 bit box with intel 3000 gfx I noticed that if I right click on the Normal Node Sphere and select the Reset All To Default Values in the compositor the sphere turns black and then trying to reposition the globe by left clicking on it does not seem to work; The globe stays black. I have attached a test blend file, my system-info.txt file and a video showing the problem. [system-info.txt](https://archive.blender.org/developer/F77385/system-info.txt) [NormalNode_Sphere_Bug.blend](https://archive.blender.org/developer/F77386/NormalNode_Sphere_Bug.blend) [NormalSphereBugVideo.webm](https://archive.blender.org/developer/F77387/NormalSphereBugVideo.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Lukas Tönne was assigned by Sergey Sharybin 2014-02-17 08:22:08 +01:00

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

@LukasTonne, seems simple rna defaults change :)

@LukasTonne, seems simple rna defaults change :)

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by blender/blender-addons-contrib@ecd0565f28

This issue was referenced by blender/blender-addons-contrib@ecd0565f28cb6cb5bc09455e05db6692a6fcf826

This issue was referenced by ecd0565f28

This issue was referenced by ecd0565f28cb6cb5bc09455e05db6692a6fcf826
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit ecd0565f28.

Closed by commit ecd0565f28.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38651
No description provided.